// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CalendarModal render default render modal close 1`] = `
<Memo(CalendarModal)
  isOpen={false}
  onClose={[MockFunction]}
  onSubmit={[MockFunction]}
  teams={
    Array [
      Object {
        "id": "asdksadowkd",
        "members": Array [
          Object {
            "id": "asdffegegege",
            "name": "Eric Meyer",
            "vacations": Array [
              Object {
                "endDate": "2021-02-15",
                "startDate": "2021-02-12",
                "type": "Paid",
              },
              Object {
                "endDate": "2021-04-29",
                "startDate": "2021-04-23",
                "type": "UnPaid",
              },
              Object {
                "endDate": "2021-04-21",
                "startDate": "2021-04-14",
                "type": "UnPaid",
              },
              Object {
                "endDate": "2021-04-08",
                "startDate": "2021-04-01",
                "type": "Paid",
              },
            ],
          },
          Object {
            "id": "fllfhllkjj",
            "name": "Chris Coyier",
            "vacations": Array [
              Object {
                "endDate": "2021-02-19",
                "startDate": "2021-01-19",
                "type": "Paid",
              },
              Object {
                "endDate": "2021-02-22",
                "startDate": "2021-02-20",
                "type": "UnPaid",
              },
              Object {
                "endDate": "2021-04-28",
                "startDate": "2021-04-18",
                "type": "UnPaid",
              },
              Object {
                "endDate": "2021-04-01",
                "startDate": "2021-03-29",
                "type": "Paid",
              },
            ],
          },
          Object {
            "id": "sdaasdwdd",
            "name": "Jack London",
            "vacations": Array [
              Object {
                "endDate": "2021-02-01",
                "startDate": "2021-01-28",
                "type": "Paid",
              },
              Object {
                "endDate": "2021-01-18",
                "startDate": "2021-01-15",
                "type": "Paid",
              },
            ],
          },
          Object {
            "id": "wdwrtettete",
            "name": "Paul Irish",
            "vacations": Array [
              Object {
                "endDate": "2021-02-22",
                "startDate": "2021-02-20",
                "type": "Paid",
              },
              Object {
                "endDate": "2021-03-25",
                "startDate": "2021-02-25",
                "type": "Paid",
              },
              Object {
                "endDate": "2021-04-28",
                "startDate": "2021-04-18",
                "type": "Paid",
              },
            ],
          },
        ],
        "name": "Frontend Team",
        "percentageOfAbsent": Array [
          0,
          2,
          0,
          0,
          1,
          22,
          2,
          2,
          2,
          2,
          11,
          1,
        ],
      },
      Object {
        "id": "owkdowr",
        "members": Array [
          Object {
            "id": "pppioiopoiiu",
            "name": "Isaac Newton",
            "vacations": Array [
              Object {
                "endDate": "2020-02-22",
                "startDate": "2020-02-20",
                "type": "UnPaid",
              },
              Object {
                "endDate": "2020-03-22",
                "startDate": "2020-03-20",
                "type": "UnPaid",
              },
            ],
          },
          Object {
            "id": "qqrtruu",
            "name": "Friedrich Nietzsche",
            "vacations": Array [
              Object {
                "endDate": "2021-03-28",
                "startDate": "2021-03-25",
                "type": "Paid",
              },
              Object {
                "endDate": "2021-03-22",
                "startDate": "2021-02-22",
                "type": "UnPaid",
              },
              Object {
                "endDate": "2021-06-09",
                "startDate": "2021-04-20",
                "type": "UnPaid",
              },
            ],
          },
          Object {
            "id": "rrytyotyoti",
            "name": "Albert Einstein",
            "vacations": Array [
              Object {
                "endDate": "2021-03-22",
                "startDate": "2021-02-15",
                "type": "UnPaid",
              },
            ],
          },
        ],
        "name": "Backend Team",
        "percentageOfAbsent": Array [
          0,
          2,
          0,
          0,
          1,
          2,
          2,
          2,
          2,
          2,
          1,
          1,
        ],
      },
      Object {
        "id": "skfdgkgjgkdjg",
        "members": Array [
          Object {
            "id": "ncnxmvn",
            "name": "ROBERT MORRIS",
            "vacations": Array [
              Object {
                "endDate": "2021-04-22",
                "startDate": "2021-03-20",
                "type": "UnPaid",
              },
              Object {
                "endDate": "2021-02-22",
                "startDate": "2021-01-20",
                "type": "UnPaid",
              },
              Object {
                "endDate": "2021-04-29",
                "startDate": "2021-04-23",
                "type": "UnPaid",
              },
            ],
          },
          Object {
            "id": "sdnnbnvnc",
            "name": "KEVIN MITNINK",
            "vacations": Array [
              Object {
                "endDate": "2021-05-12",
                "startDate": "2021-04-20",
                "type": "Paid",
              },
              Object {
                "endDate": "2021-04-19",
                "startDate": "2021-04-14",
                "type": "UnPaid",
              },
              Object {
                "endDate": "2021-04-13",
                "startDate": "2021-04-01",
                "type": "Paid",
              },
            ],
          },
        ],
        "name": "QA Team",
        "percentageOfAbsent": Array [
          16,
          14,
          0,
          0,
          1,
          2,
          0,
          2,
          2,
          0,
          0,
          28,
        ],
      },
      Object {
        "id": "wdwfetrrrt",
        "members": Array [
          Object {
            "id": "ncnfjndjgfe",
            "name": "Raymond Kroc",
            "vacations": Array [
              Object {
                "endDate": "2020-04-12",
                "startDate": "2020-03-30",
                "type": "UnPaid",
              },
              Object {
                "endDate": "2021-03-20",
                "startDate": "2021-02-17",
                "type": "Paid",
              },
              Object {
                "endDate": "2021-04-21",
                "startDate": "2021-04-10",
                "type": "UnPaid",
              },
              Object {
                "endDate": "2021-04-25",
                "startDate": "2021-04-22",
                "type": "Paid",
              },
            ],
          },
        ],
        "name": "Manager Team",
        "percentageOfAbsent": Array [
          16,
          14,
          0,
          0,
          1,
          2,
          0,
          2,
          2,
          0,
          0,
          28,
        ],
      },
      Object {
        "id": "xncmxnmv",
        "members": Array [
          Object {
            "id": "dsdwdwfgg",
            "name": "Guccio Gucci",
            "vacations": Array [
              Object {
                "endDate": "2021-03-15",
                "startDate": "2021-02-22",
                "type": "UnPaid",
              },
              Object {
                "endDate": "2021-04-15",
                "startDate": "2021-03-30",
                "type": "Paid",
              },
            ],
          },
          Object {
            "id": "popoptopp",
            "name": "Gabrielle Bonheur Chanel",
            "vacations": Array [
              Object {
                "endDate": "2021-02-28",
                "startDate": "2021-01-15",
                "type": "UnPaid",
              },
              Object {
                "endDate": "2021-03-12",
                "startDate": "2021-03-01",
                "type": "Paid",
              },
            ],
          },
        ],
        "name": "Design Team",
        "percentageOfAbsent": Array [
          11,
          4,
          0,
          0,
          1,
          2,
          0,
          2,
          12,
          2,
          0,
          1,
        ],
      },
    ]
  }
>
  <Memo(Modal)
    onClose={[MockFunction]}
    open={false}
  >
    <Memo()
      countDays={7}
      isValidDays={true}
    />
    <Memo(ModalBody) />
    <Memo()
      isDisabled={false}
      onClose={[MockFunction]}
      onSubmit={[Function]}
    />
  </Memo(Modal)>
</Memo(CalendarModal)>
`;

exports[`CalendarModal render render modal open 1`] = `
<Memo(CalendarModal)
  isOpen={true}
  onClose={[MockFunction]}
  onSubmit={[MockFunction]}
  teams={
    Array [
      Object {
        "id": "asdksadowkd",
        "members": Array [
          Object {
            "id": "asdffegegege",
            "name": "Eric Meyer",
            "vacations": Array [
              Object {
                "endDate": "2021-02-15",
                "startDate": "2021-02-12",
                "type": "Paid",
              },
              Object {
                "endDate": "2021-04-29",
                "startDate": "2021-04-23",
                "type": "UnPaid",
              },
              Object {
                "endDate": "2021-04-21",
                "startDate": "2021-04-14",
                "type": "UnPaid",
              },
              Object {
                "endDate": "2021-04-08",
                "startDate": "2021-04-01",
                "type": "Paid",
              },
            ],
          },
          Object {
            "id": "fllfhllkjj",
            "name": "Chris Coyier",
            "vacations": Array [
              Object {
                "endDate": "2021-02-19",
                "startDate": "2021-01-19",
                "type": "Paid",
              },
              Object {
                "endDate": "2021-02-22",
                "startDate": "2021-02-20",
                "type": "UnPaid",
              },
              Object {
                "endDate": "2021-04-28",
                "startDate": "2021-04-18",
                "type": "UnPaid",
              },
              Object {
                "endDate": "2021-04-01",
                "startDate": "2021-03-29",
                "type": "Paid",
              },
            ],
          },
          Object {
            "id": "sdaasdwdd",
            "name": "Jack London",
            "vacations": Array [
              Object {
                "endDate": "2021-02-01",
                "startDate": "2021-01-28",
                "type": "Paid",
              },
              Object {
                "endDate": "2021-01-18",
                "startDate": "2021-01-15",
                "type": "Paid",
              },
            ],
          },
          Object {
            "id": "wdwrtettete",
            "name": "Paul Irish",
            "vacations": Array [
              Object {
                "endDate": "2021-02-22",
                "startDate": "2021-02-20",
                "type": "Paid",
              },
              Object {
                "endDate": "2021-03-25",
                "startDate": "2021-02-25",
                "type": "Paid",
              },
              Object {
                "endDate": "2021-04-28",
                "startDate": "2021-04-18",
                "type": "Paid",
              },
            ],
          },
        ],
        "name": "Frontend Team",
        "percentageOfAbsent": Array [
          0,
          2,
          0,
          0,
          1,
          22,
          2,
          2,
          2,
          2,
          11,
          1,
        ],
      },
      Object {
        "id": "owkdowr",
        "members": Array [
          Object {
            "id": "pppioiopoiiu",
            "name": "Isaac Newton",
            "vacations": Array [
              Object {
                "endDate": "2020-02-22",
                "startDate": "2020-02-20",
                "type": "UnPaid",
              },
              Object {
                "endDate": "2020-03-22",
                "startDate": "2020-03-20",
                "type": "UnPaid",
              },
            ],
          },
          Object {
            "id": "qqrtruu",
            "name": "Friedrich Nietzsche",
            "vacations": Array [
              Object {
                "endDate": "2021-03-28",
                "startDate": "2021-03-25",
                "type": "Paid",
              },
              Object {
                "endDate": "2021-03-22",
                "startDate": "2021-02-22",
                "type": "UnPaid",
              },
              Object {
                "endDate": "2021-06-09",
                "startDate": "2021-04-20",
                "type": "UnPaid",
              },
            ],
          },
          Object {
            "id": "rrytyotyoti",
            "name": "Albert Einstein",
            "vacations": Array [
              Object {
                "endDate": "2021-03-22",
                "startDate": "2021-02-15",
                "type": "UnPaid",
              },
            ],
          },
        ],
        "name": "Backend Team",
        "percentageOfAbsent": Array [
          0,
          2,
          0,
          0,
          1,
          2,
          2,
          2,
          2,
          2,
          1,
          1,
        ],
      },
      Object {
        "id": "skfdgkgjgkdjg",
        "members": Array [
          Object {
            "id": "ncnxmvn",
            "name": "ROBERT MORRIS",
            "vacations": Array [
              Object {
                "endDate": "2021-04-22",
                "startDate": "2021-03-20",
                "type": "UnPaid",
              },
              Object {
                "endDate": "2021-02-22",
                "startDate": "2021-01-20",
                "type": "UnPaid",
              },
              Object {
                "endDate": "2021-04-29",
                "startDate": "2021-04-23",
                "type": "UnPaid",
              },
            ],
          },
          Object {
            "id": "sdnnbnvnc",
            "name": "KEVIN MITNINK",
            "vacations": Array [
              Object {
                "endDate": "2021-05-12",
                "startDate": "2021-04-20",
                "type": "Paid",
              },
              Object {
                "endDate": "2021-04-19",
                "startDate": "2021-04-14",
                "type": "UnPaid",
              },
              Object {
                "endDate": "2021-04-13",
                "startDate": "2021-04-01",
                "type": "Paid",
              },
            ],
          },
        ],
        "name": "QA Team",
        "percentageOfAbsent": Array [
          16,
          14,
          0,
          0,
          1,
          2,
          0,
          2,
          2,
          0,
          0,
          28,
        ],
      },
      Object {
        "id": "wdwfetrrrt",
        "members": Array [
          Object {
            "id": "ncnfjndjgfe",
            "name": "Raymond Kroc",
            "vacations": Array [
              Object {
                "endDate": "2020-04-12",
                "startDate": "2020-03-30",
                "type": "UnPaid",
              },
              Object {
                "endDate": "2021-03-20",
                "startDate": "2021-02-17",
                "type": "Paid",
              },
              Object {
                "endDate": "2021-04-21",
                "startDate": "2021-04-10",
                "type": "UnPaid",
              },
              Object {
                "endDate": "2021-04-25",
                "startDate": "2021-04-22",
                "type": "Paid",
              },
            ],
          },
        ],
        "name": "Manager Team",
        "percentageOfAbsent": Array [
          16,
          14,
          0,
          0,
          1,
          2,
          0,
          2,
          2,
          0,
          0,
          28,
        ],
      },
      Object {
        "id": "xncmxnmv",
        "members": Array [
          Object {
            "id": "dsdwdwfgg",
            "name": "Guccio Gucci",
            "vacations": Array [
              Object {
                "endDate": "2021-03-15",
                "startDate": "2021-02-22",
                "type": "UnPaid",
              },
              Object {
                "endDate": "2021-04-15",
                "startDate": "2021-03-30",
                "type": "Paid",
              },
            ],
          },
          Object {
            "id": "popoptopp",
            "name": "Gabrielle Bonheur Chanel",
            "vacations": Array [
              Object {
                "endDate": "2021-02-28",
                "startDate": "2021-01-15",
                "type": "UnPaid",
              },
              Object {
                "endDate": "2021-03-12",
                "startDate": "2021-03-01",
                "type": "Paid",
              },
            ],
          },
        ],
        "name": "Design Team",
        "percentageOfAbsent": Array [
          11,
          4,
          0,
          0,
          1,
          2,
          0,
          2,
          12,
          2,
          0,
          1,
        ],
      },
    ]
  }
>
  <Memo(Modal)
    onClose={[MockFunction]}
    open={true}
  >
    <div
      className="overlay"
      id="overlay"
      onClick={[Function]}
    >
      <div
        className="modal"
      >
        <Memo()
          countDays={7}
          isValidDays={true}
        >
          <Memo(ModalHeader)
            className={
              Array [
                "calendarModalHeader",
              ]
            }
          >
            <div
              className="modalHeader calendarModalHeader"
            >
              <h4
                className="calendarModalHeader__title"
              >
                Vacation Request
              </h4>
              <div
                className="calendarModalHeader__days"
              >
                 
                7
                 Days
              </div>
            </div>
          </Memo(ModalHeader)>
        </Memo()>
        <Memo(ModalBody)>
          <div
            className="modalBody"
          >
            <Memo(Form)>
              <form
                className="form"
              >
                <div
                  className="form__item"
                  key="0/.0"
                >
                  <Memo(FormDates)
                    endDate={
                      Object {
                        "changeValue": [Function],
                        "value": "2021-05-10",
                      }
                    }
                    startDate={
                      Object {
                        "changeValue": [Function],
                        "value": "2021-05-03",
                      }
                    }
                  >
                    <Memo(FormItem)
                      classNames={Array []}
                      inner={true}
                      title="Dates"
                    >
                      <div
                        className="formItem"
                      >
                        <h5
                          className="formItem__title"
                        >
                          Dates
                        </h5>
                        <div
                          className="formItem__inner"
                        >
                           
                          <Memo(InputDate)
                            label="From"
                            name="startDate"
                            onChange={[Function]}
                            value="2021-05-03"
                          >
                            <label
                              className="inputDate"
                            >
                              From
                               
                              <input
                                className="inputDate__field"
                                name="startDate"
                                onChange={[Function]}
                                type="date"
                                value="2021-05-03"
                              />
                            </label>
                          </Memo(InputDate)>
                          <Memo(InputDate)
                            label="To"
                            name="endDate"
                            onChange={[Function]}
                            value="2021-05-10"
                          >
                            <label
                              className="inputDate"
                            >
                              To
                               
                              <input
                                className="inputDate__field"
                                name="endDate"
                                onChange={[Function]}
                                type="date"
                                value="2021-05-10"
                              />
                            </label>
                          </Memo(InputDate)>
                        </div>
                      </div>
                    </Memo(FormItem)>
                  </Memo(FormDates)>
                </div>
                <div
                  className="form__item"
                  key="1/.1"
                >
                  <Memo(FormTeamsSelect)
                    select={
                      Object {
                        "changeValue": [Function],
                        "value": "asdksadowkd",
                      }
                    }
                    teams={
                      Array [
                        Object {
                          "id": "asdksadowkd",
                          "members": Array [
                            Object {
                              "id": "asdffegegege",
                              "name": "Eric Meyer",
                              "vacations": Array [
                                Object {
                                  "endDate": "2021-02-15",
                                  "startDate": "2021-02-12",
                                  "type": "Paid",
                                },
                                Object {
                                  "endDate": "2021-04-29",
                                  "startDate": "2021-04-23",
                                  "type": "UnPaid",
                                },
                                Object {
                                  "endDate": "2021-04-21",
                                  "startDate": "2021-04-14",
                                  "type": "UnPaid",
                                },
                                Object {
                                  "endDate": "2021-04-08",
                                  "startDate": "2021-04-01",
                                  "type": "Paid",
                                },
                              ],
                            },
                            Object {
                              "id": "fllfhllkjj",
                              "name": "Chris Coyier",
                              "vacations": Array [
                                Object {
                                  "endDate": "2021-02-19",
                                  "startDate": "2021-01-19",
                                  "type": "Paid",
                                },
                                Object {
                                  "endDate": "2021-02-22",
                                  "startDate": "2021-02-20",
                                  "type": "UnPaid",
                                },
                                Object {
                                  "endDate": "2021-04-28",
                                  "startDate": "2021-04-18",
                                  "type": "UnPaid",
                                },
                                Object {
                                  "endDate": "2021-04-01",
                                  "startDate": "2021-03-29",
                                  "type": "Paid",
                                },
                              ],
                            },
                            Object {
                              "id": "sdaasdwdd",
                              "name": "Jack London",
                              "vacations": Array [
                                Object {
                                  "endDate": "2021-02-01",
                                  "startDate": "2021-01-28",
                                  "type": "Paid",
                                },
                                Object {
                                  "endDate": "2021-01-18",
                                  "startDate": "2021-01-15",
                                  "type": "Paid",
                                },
                              ],
                            },
                            Object {
                              "id": "wdwrtettete",
                              "name": "Paul Irish",
                              "vacations": Array [
                                Object {
                                  "endDate": "2021-02-22",
                                  "startDate": "2021-02-20",
                                  "type": "Paid",
                                },
                                Object {
                                  "endDate": "2021-03-25",
                                  "startDate": "2021-02-25",
                                  "type": "Paid",
                                },
                                Object {
                                  "endDate": "2021-04-28",
                                  "startDate": "2021-04-18",
                                  "type": "Paid",
                                },
                              ],
                            },
                          ],
                          "name": "Frontend Team",
                          "percentageOfAbsent": Array [
                            0,
                            2,
                            0,
                            0,
                            1,
                            22,
                            2,
                            2,
                            2,
                            2,
                            11,
                            1,
                          ],
                        },
                        Object {
                          "id": "owkdowr",
                          "members": Array [
                            Object {
                              "id": "pppioiopoiiu",
                              "name": "Isaac Newton",
                              "vacations": Array [
                                Object {
                                  "endDate": "2020-02-22",
                                  "startDate": "2020-02-20",
                                  "type": "UnPaid",
                                },
                                Object {
                                  "endDate": "2020-03-22",
                                  "startDate": "2020-03-20",
                                  "type": "UnPaid",
                                },
                              ],
                            },
                            Object {
                              "id": "qqrtruu",
                              "name": "Friedrich Nietzsche",
                              "vacations": Array [
                                Object {
                                  "endDate": "2021-03-28",
                                  "startDate": "2021-03-25",
                                  "type": "Paid",
                                },
                                Object {
                                  "endDate": "2021-03-22",
                                  "startDate": "2021-02-22",
                                  "type": "UnPaid",
                                },
                                Object {
                                  "endDate": "2021-06-09",
                                  "startDate": "2021-04-20",
                                  "type": "UnPaid",
                                },
                              ],
                            },
                            Object {
                              "id": "rrytyotyoti",
                              "name": "Albert Einstein",
                              "vacations": Array [
                                Object {
                                  "endDate": "2021-03-22",
                                  "startDate": "2021-02-15",
                                  "type": "UnPaid",
                                },
                              ],
                            },
                          ],
                          "name": "Backend Team",
                          "percentageOfAbsent": Array [
                            0,
                            2,
                            0,
                            0,
                            1,
                            2,
                            2,
                            2,
                            2,
                            2,
                            1,
                            1,
                          ],
                        },
                        Object {
                          "id": "skfdgkgjgkdjg",
                          "members": Array [
                            Object {
                              "id": "ncnxmvn",
                              "name": "ROBERT MORRIS",
                              "vacations": Array [
                                Object {
                                  "endDate": "2021-04-22",
                                  "startDate": "2021-03-20",
                                  "type": "UnPaid",
                                },
                                Object {
                                  "endDate": "2021-02-22",
                                  "startDate": "2021-01-20",
                                  "type": "UnPaid",
                                },
                                Object {
                                  "endDate": "2021-04-29",
                                  "startDate": "2021-04-23",
                                  "type": "UnPaid",
                                },
                              ],
                            },
                            Object {
                              "id": "sdnnbnvnc",
                              "name": "KEVIN MITNINK",
                              "vacations": Array [
                                Object {
                                  "endDate": "2021-05-12",
                                  "startDate": "2021-04-20",
                                  "type": "Paid",
                                },
                                Object {
                                  "endDate": "2021-04-19",
                                  "startDate": "2021-04-14",
                                  "type": "UnPaid",
                                },
                                Object {
                                  "endDate": "2021-04-13",
                                  "startDate": "2021-04-01",
                                  "type": "Paid",
                                },
                              ],
                            },
                          ],
                          "name": "QA Team",
                          "percentageOfAbsent": Array [
                            16,
                            14,
                            0,
                            0,
                            1,
                            2,
                            0,
                            2,
                            2,
                            0,
                            0,
                            28,
                          ],
                        },
                        Object {
                          "id": "wdwfetrrrt",
                          "members": Array [
                            Object {
                              "id": "ncnfjndjgfe",
                              "name": "Raymond Kroc",
                              "vacations": Array [
                                Object {
                                  "endDate": "2020-04-12",
                                  "startDate": "2020-03-30",
                                  "type": "UnPaid",
                                },
                                Object {
                                  "endDate": "2021-03-20",
                                  "startDate": "2021-02-17",
                                  "type": "Paid",
                                },
                                Object {
                                  "endDate": "2021-04-21",
                                  "startDate": "2021-04-10",
                                  "type": "UnPaid",
                                },
                                Object {
                                  "endDate": "2021-04-25",
                                  "startDate": "2021-04-22",
                                  "type": "Paid",
                                },
                              ],
                            },
                          ],
                          "name": "Manager Team",
                          "percentageOfAbsent": Array [
                            16,
                            14,
                            0,
                            0,
                            1,
                            2,
                            0,
                            2,
                            2,
                            0,
                            0,
                            28,
                          ],
                        },
                        Object {
                          "id": "xncmxnmv",
                          "members": Array [
                            Object {
                              "id": "dsdwdwfgg",
                              "name": "Guccio Gucci",
                              "vacations": Array [
                                Object {
                                  "endDate": "2021-03-15",
                                  "startDate": "2021-02-22",
                                  "type": "UnPaid",
                                },
                                Object {
                                  "endDate": "2021-04-15",
                                  "startDate": "2021-03-30",
                                  "type": "Paid",
                                },
                              ],
                            },
                            Object {
                              "id": "popoptopp",
                              "name": "Gabrielle Bonheur Chanel",
                              "vacations": Array [
                                Object {
                                  "endDate": "2021-02-28",
                                  "startDate": "2021-01-15",
                                  "type": "UnPaid",
                                },
                                Object {
                                  "endDate": "2021-03-12",
                                  "startDate": "2021-03-01",
                                  "type": "Paid",
                                },
                              ],
                            },
                          ],
                          "name": "Design Team",
                          "percentageOfAbsent": Array [
                            11,
                            4,
                            0,
                            0,
                            1,
                            2,
                            0,
                            2,
                            12,
                            2,
                            0,
                            1,
                          ],
                        },
                      ]
                    }
                  >
                    <Memo(FormItem)
                      classNames={Array []}
                      title="Teams"
                    >
                      <div
                        className="formItem"
                      >
                        <h5
                          className="formItem__title"
                        >
                          Teams
                        </h5>
                        <Memo(Select)
                          name="teams"
                          onChange={[Function]}
                          value="asdksadowkd"
                        >
                          <div
                            className="select"
                          >
                            <select
                              className="select__main"
                              name="teams"
                              onChange={[Function]}
                              value="asdksadowkd"
                            >
                              <Memo(Option)
                                key=".$asdksadowkd"
                                title="Frontend Team"
                                value="asdksadowkd"
                              >
                                <option
                                  className="select__option"
                                  value="asdksadowkd"
                                >
                                  Frontend Team
                                </option>
                              </Memo(Option)>
                              <Memo(Option)
                                key=".$owkdowr"
                                title="Backend Team"
                                value="owkdowr"
                              >
                                <option
                                  className="select__option"
                                  value="owkdowr"
                                >
                                  Backend Team
                                </option>
                              </Memo(Option)>
                              <Memo(Option)
                                key=".$skfdgkgjgkdjg"
                                title="QA Team"
                                value="skfdgkgjgkdjg"
                              >
                                <option
                                  className="select__option"
                                  value="skfdgkgjgkdjg"
                                >
                                  QA Team
                                </option>
                              </Memo(Option)>
                              <Memo(Option)
                                key=".$wdwfetrrrt"
                                title="Manager Team"
                                value="wdwfetrrrt"
                              >
                                <option
                                  className="select__option"
                                  value="wdwfetrrrt"
                                >
                                  Manager Team
                                </option>
                              </Memo(Option)>
                              <Memo(Option)
                                key=".$xncmxnmv"
                                title="Design Team"
                                value="xncmxnmv"
                              >
                                <option
                                  className="select__option"
                                  value="xncmxnmv"
                                >
                                  Design Team
                                </option>
                              </Memo(Option)>
                            </select>
                          </div>
                        </Memo(Select)>
                      </div>
                    </Memo(FormItem)>
                  </Memo(FormTeamsSelect)>
                </div>
                <div
                  className="form__item"
                  key="2/.2"
                >
                  <Memo(FormMembersSelect)
                    select={
                      Object {
                        "changeValue": [Function],
                        "value": "asdffegegege",
                      }
                    }
                    teamId="asdksadowkd"
                    teams={
                      Array [
                        Object {
                          "id": "asdksadowkd",
                          "members": Array [
                            Object {
                              "id": "asdffegegege",
                              "name": "Eric Meyer",
                              "vacations": Array [
                                Object {
                                  "endDate": "2021-02-15",
                                  "startDate": "2021-02-12",
                                  "type": "Paid",
                                },
                                Object {
                                  "endDate": "2021-04-29",
                                  "startDate": "2021-04-23",
                                  "type": "UnPaid",
                                },
                                Object {
                                  "endDate": "2021-04-21",
                                  "startDate": "2021-04-14",
                                  "type": "UnPaid",
                                },
                                Object {
                                  "endDate": "2021-04-08",
                                  "startDate": "2021-04-01",
                                  "type": "Paid",
                                },
                              ],
                            },
                            Object {
                              "id": "fllfhllkjj",
                              "name": "Chris Coyier",
                              "vacations": Array [
                                Object {
                                  "endDate": "2021-02-19",
                                  "startDate": "2021-01-19",
                                  "type": "Paid",
                                },
                                Object {
                                  "endDate": "2021-02-22",
                                  "startDate": "2021-02-20",
                                  "type": "UnPaid",
                                },
                                Object {
                                  "endDate": "2021-04-28",
                                  "startDate": "2021-04-18",
                                  "type": "UnPaid",
                                },
                                Object {
                                  "endDate": "2021-04-01",
                                  "startDate": "2021-03-29",
                                  "type": "Paid",
                                },
                              ],
                            },
                            Object {
                              "id": "sdaasdwdd",
                              "name": "Jack London",
                              "vacations": Array [
                                Object {
                                  "endDate": "2021-02-01",
                                  "startDate": "2021-01-28",
                                  "type": "Paid",
                                },
                                Object {
                                  "endDate": "2021-01-18",
                                  "startDate": "2021-01-15",
                                  "type": "Paid",
                                },
                              ],
                            },
                            Object {
                              "id": "wdwrtettete",
                              "name": "Paul Irish",
                              "vacations": Array [
                                Object {
                                  "endDate": "2021-02-22",
                                  "startDate": "2021-02-20",
                                  "type": "Paid",
                                },
                                Object {
                                  "endDate": "2021-03-25",
                                  "startDate": "2021-02-25",
                                  "type": "Paid",
                                },
                                Object {
                                  "endDate": "2021-04-28",
                                  "startDate": "2021-04-18",
                                  "type": "Paid",
                                },
                              ],
                            },
                          ],
                          "name": "Frontend Team",
                          "percentageOfAbsent": Array [
                            0,
                            2,
                            0,
                            0,
                            1,
                            22,
                            2,
                            2,
                            2,
                            2,
                            11,
                            1,
                          ],
                        },
                        Object {
                          "id": "owkdowr",
                          "members": Array [
                            Object {
                              "id": "pppioiopoiiu",
                              "name": "Isaac Newton",
                              "vacations": Array [
                                Object {
                                  "endDate": "2020-02-22",
                                  "startDate": "2020-02-20",
                                  "type": "UnPaid",
                                },
                                Object {
                                  "endDate": "2020-03-22",
                                  "startDate": "2020-03-20",
                                  "type": "UnPaid",
                                },
                              ],
                            },
                            Object {
                              "id": "qqrtruu",
                              "name": "Friedrich Nietzsche",
                              "vacations": Array [
                                Object {
                                  "endDate": "2021-03-28",
                                  "startDate": "2021-03-25",
                                  "type": "Paid",
                                },
                                Object {
                                  "endDate": "2021-03-22",
                                  "startDate": "2021-02-22",
                                  "type": "UnPaid",
                                },
                                Object {
                                  "endDate": "2021-06-09",
                                  "startDate": "2021-04-20",
                                  "type": "UnPaid",
                                },
                              ],
                            },
                            Object {
                              "id": "rrytyotyoti",
                              "name": "Albert Einstein",
                              "vacations": Array [
                                Object {
                                  "endDate": "2021-03-22",
                                  "startDate": "2021-02-15",
                                  "type": "UnPaid",
                                },
                              ],
                            },
                          ],
                          "name": "Backend Team",
                          "percentageOfAbsent": Array [
                            0,
                            2,
                            0,
                            0,
                            1,
                            2,
                            2,
                            2,
                            2,
                            2,
                            1,
                            1,
                          ],
                        },
                        Object {
                          "id": "skfdgkgjgkdjg",
                          "members": Array [
                            Object {
                              "id": "ncnxmvn",
                              "name": "ROBERT MORRIS",
                              "vacations": Array [
                                Object {
                                  "endDate": "2021-04-22",
                                  "startDate": "2021-03-20",
                                  "type": "UnPaid",
                                },
                                Object {
                                  "endDate": "2021-02-22",
                                  "startDate": "2021-01-20",
                                  "type": "UnPaid",
                                },
                                Object {
                                  "endDate": "2021-04-29",
                                  "startDate": "2021-04-23",
                                  "type": "UnPaid",
                                },
                              ],
                            },
                            Object {
                              "id": "sdnnbnvnc",
                              "name": "KEVIN MITNINK",
                              "vacations": Array [
                                Object {
                                  "endDate": "2021-05-12",
                                  "startDate": "2021-04-20",
                                  "type": "Paid",
                                },
                                Object {
                                  "endDate": "2021-04-19",
                                  "startDate": "2021-04-14",
                                  "type": "UnPaid",
                                },
                                Object {
                                  "endDate": "2021-04-13",
                                  "startDate": "2021-04-01",
                                  "type": "Paid",
                                },
                              ],
                            },
                          ],
                          "name": "QA Team",
                          "percentageOfAbsent": Array [
                            16,
                            14,
                            0,
                            0,
                            1,
                            2,
                            0,
                            2,
                            2,
                            0,
                            0,
                            28,
                          ],
                        },
                        Object {
                          "id": "wdwfetrrrt",
                          "members": Array [
                            Object {
                              "id": "ncnfjndjgfe",
                              "name": "Raymond Kroc",
                              "vacations": Array [
                                Object {
                                  "endDate": "2020-04-12",
                                  "startDate": "2020-03-30",
                                  "type": "UnPaid",
                                },
                                Object {
                                  "endDate": "2021-03-20",
                                  "startDate": "2021-02-17",
                                  "type": "Paid",
                                },
                                Object {
                                  "endDate": "2021-04-21",
                                  "startDate": "2021-04-10",
                                  "type": "UnPaid",
                                },
                                Object {
                                  "endDate": "2021-04-25",
                                  "startDate": "2021-04-22",
                                  "type": "Paid",
                                },
                              ],
                            },
                          ],
                          "name": "Manager Team",
                          "percentageOfAbsent": Array [
                            16,
                            14,
                            0,
                            0,
                            1,
                            2,
                            0,
                            2,
                            2,
                            0,
                            0,
                            28,
                          ],
                        },
                        Object {
                          "id": "xncmxnmv",
                          "members": Array [
                            Object {
                              "id": "dsdwdwfgg",
                              "name": "Guccio Gucci",
                              "vacations": Array [
                                Object {
                                  "endDate": "2021-03-15",
                                  "startDate": "2021-02-22",
                                  "type": "UnPaid",
                                },
                                Object {
                                  "endDate": "2021-04-15",
                                  "startDate": "2021-03-30",
                                  "type": "Paid",
                                },
                              ],
                            },
                            Object {
                              "id": "popoptopp",
                              "name": "Gabrielle Bonheur Chanel",
                              "vacations": Array [
                                Object {
                                  "endDate": "2021-02-28",
                                  "startDate": "2021-01-15",
                                  "type": "UnPaid",
                                },
                                Object {
                                  "endDate": "2021-03-12",
                                  "startDate": "2021-03-01",
                                  "type": "Paid",
                                },
                              ],
                            },
                          ],
                          "name": "Design Team",
                          "percentageOfAbsent": Array [
                            11,
                            4,
                            0,
                            0,
                            1,
                            2,
                            0,
                            2,
                            12,
                            2,
                            0,
                            1,
                          ],
                        },
                      ]
                    }
                  >
                    <Memo(FormItem)
                      classNames={Array []}
                      title="User"
                    >
                      <div
                        className="formItem"
                      >
                        <h5
                          className="formItem__title"
                        >
                          User
                        </h5>
                        <Memo(Select)
                          name="members"
                          onChange={[Function]}
                          value="asdffegegege"
                        >
                          <div
                            className="select"
                          >
                            <select
                              className="select__main"
                              name="members"
                              onChange={[Function]}
                              value="asdffegegege"
                            >
                              <Memo(Option)
                                key=".$asdffegegege"
                                title="Eric Meyer"
                                value="asdffegegege"
                              >
                                <option
                                  className="select__option"
                                  value="asdffegegege"
                                >
                                  Eric Meyer
                                </option>
                              </Memo(Option)>
                              <Memo(Option)
                                key=".$fllfhllkjj"
                                title="Chris Coyier"
                                value="fllfhllkjj"
                              >
                                <option
                                  className="select__option"
                                  value="fllfhllkjj"
                                >
                                  Chris Coyier
                                </option>
                              </Memo(Option)>
                              <Memo(Option)
                                key=".$sdaasdwdd"
                                title="Jack London"
                                value="sdaasdwdd"
                              >
                                <option
                                  className="select__option"
                                  value="sdaasdwdd"
                                >
                                  Jack London
                                </option>
                              </Memo(Option)>
                              <Memo(Option)
                                key=".$wdwrtettete"
                                title="Paul Irish"
                                value="wdwrtettete"
                              >
                                <option
                                  className="select__option"
                                  value="wdwrtettete"
                                >
                                  Paul Irish
                                </option>
                              </Memo(Option)>
                            </select>
                          </div>
                        </Memo(Select)>
                      </div>
                    </Memo(FormItem)>
                  </Memo(FormMembersSelect)>
                </div>
                <div
                  className="form__item"
                  key="3/.3"
                >
                  <Memo(FormVacationTypeSelect)
                    select={
                      Object {
                        "changeValue": [Function],
                        "value": "UnPaid",
                      }
                    }
                  >
                    <Memo(FormItem)
                      classNames={Array []}
                      title="Vac Type"
                    >
                      <div
                        className="formItem"
                      >
                        <h5
                          className="formItem__title"
                        >
                          Vac Type
                        </h5>
                        <Memo(Select)
                          name="types"
                          onChange={[Function]}
                          value="UnPaid"
                        >
                          <div
                            className="select"
                          >
                            <select
                              className="select__main"
                              name="types"
                              onChange={[Function]}
                              value="UnPaid"
                            >
                              <Memo(Option)
                                key=".0"
                                title="Paid Day Off (PD)"
                                value="UnPaid"
                              >
                                <option
                                  className="select__option"
                                  value="UnPaid"
                                >
                                  Paid Day Off (PD)
                                </option>
                              </Memo(Option)>
                              <Memo(Option)
                                key=".1"
                                title="Paid Day On (PD)"
                                value="Paid"
                              >
                                <option
                                  className="select__option"
                                  value="Paid"
                                >
                                  Paid Day On (PD)
                                </option>
                              </Memo(Option)>
                            </select>
                          </div>
                        </Memo(Select)>
                      </div>
                    </Memo(FormItem)>
                  </Memo(FormVacationTypeSelect)>
                </div>
              </form>
            </Memo(Form)>
          </div>
        </Memo(ModalBody)>
        <Memo()
          isDisabled={false}
          onClose={[MockFunction]}
          onSubmit={[Function]}
        >
          <Memo(ModalFooter)
            className={Array []}
          >
            <div
              className="modalFooter "
            >
              <Memo(Button)
                onClick={[MockFunction]}
                secondary={true}
              >
                <button
                  className="button button_secondary "
                  onClick={[MockFunction]}
                  type="button"
                >
                  Cancel
                </button>
              </Memo(Button)>
              <Memo(Button)
                disabled={false}
                onClick={[Function]}
                type="submit"
              >
                <button
                  className="button button_primary "
                  onClick={[Function]}
                  type="submit"
                >
                  Send
                </button>
              </Memo(Button)>
            </div>
          </Memo(ModalFooter)>
        </Memo()>
      </div>
    </div>
  </Memo(Modal)>
</Memo(CalendarModal)>
`;
